[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Script/Control.gd" type="Script" id=2]

[sub_resource type="StyleBoxTexture" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -233.0
margin_right = 192.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_ilus" type="Button" parent="CenterContainer"]
margin_right = 383.0
margin_bottom = 70.0
text = "Illustrasi"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CenterContainer"]
margin_top = 74.0
margin_right = 383.0
margin_bottom = 78.0
custom_styles/separator = SubResource( 1 )

[node name="btn_linear" type="Button" parent="CenterContainer"]
margin_top = 82.0
margin_right = 383.0
margin_bottom = 152.0
text = "Linear"
icon = ExtResource( 1 )

[node name="HSeparator2" type="HSeparator" parent="CenterContainer"]
margin_top = 156.0
margin_right = 383.0
margin_bottom = 160.0
custom_styles/separator = SubResource( 1 )

[node name="btn_polynomial" type="Button" parent="CenterContainer"]
margin_top = 164.0
margin_right = 383.0
margin_bottom = 234.0
text = "Polynomial"
icon = ExtResource( 1 )

[node name="HSeparator3" type="HSeparator" parent="CenterContainer"]
margin_top = 238.0
margin_right = 383.0
margin_bottom = 242.0
custom_styles/separator = SubResource( 1 )

[node name="btn_trigonometri" type="Button" parent="CenterContainer"]
margin_top = 246.0
margin_right = 383.0
margin_bottom = 316.0
text = "Trigonometri"
icon = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 271.0
margin_top = -116.0
margin_right = -265.0
margin_bottom = -46.0
text = "BACK"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/btn_ilus" to="." method="_on_btn_ilus_pressed"]
[connection signal="pressed" from="CenterContainer/btn_linear" to="." method="_on_btn_linear_pressed"]
[connection signal="pressed" from="CenterContainer/btn_polynomial" to="." method="_on_btn_polynomial_pressed"]
[connection signal="pressed" from="CenterContainer/btn_trigonometri" to="." method="_on_btn_trigonometri_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
